--- a/app/src/main/res/layout/receive_msg.xml
+++ b/app/src/main/res/layout/receive_msg.xml
@@ -1,60 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="start"
-    android:gravity="start"
-    android:layout_marginEnd="100dp"
-    android:orientation="vertical">
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="80dp">
 
-    <LinearLayout
-        android:id="@+id/mLinear"
+    <ImageView
+        android:id="@+id/message_tail"
+        android:layout_width="14dp"
+        android:layout_height="13dp"
+        android:rotation="-90"
+        android:src="@drawable/tail"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
+        app:layout_constraintStart_toStartOf="@+id/marginSpacer_beforeMessage"
+        app:tint="#fff1bf" />
+
+    <View
+        android:id="@+id/marginSpacer_beforeMessage"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
+        app:layout_constraintStart_toStartOf="parent" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:src="@drawable/green_square"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
+        app:layout_constraintStart_toEndOf="@+id/message_tail"
+        app:tint="#fff1bf" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="1dp"
-        android:background="@drawable/receive_drawable"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/rounded_rectangle"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/message"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Answer and Questions"
-            android:textAlignment="textStart"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="normal" />
+            android:layout_marginEnd="5dp"
 
-    </LinearLayout>
+            android:text="Hi. How are you? Some random text here and here. I need spend more time for android dev"
+            android:textColor="@android:color/black"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toStartOf="@id/guideline2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/timestamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12.32"
-        android:textColor="#8A91A8"
-        android:textSize="12sp"
-        android:layout_marginStart="5dp"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/mLinear"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="130dp"
-        android:layout_margin="5dp"
-        android:scaleType="centerCrop"
-        android:visibility="gone"
-        android:src="@drawable/gallery_placeholder"
-        app:layout_constraintStart_toStartOf="@+id/mLinear"
-        app:layout_constraintTop_toBottomOf="@+id/mLinear" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imageView45"
+            android:layout_width="115dp"
+            android:layout_height="115dp"
+            android:background="@drawable/rounded_rectangle_send"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp"
+            android:visibility="gone"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/message">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/gallery_placeholder" />
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="14:42"
+            android:textColor="@color/accentColor"
+            android:textSize="10sp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="37dp" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
