--- a/app/src/main/res/layout/send_msg.xml
+++ b/app/src/main/res/layout/send_msg.xml
@@ -3,57 +3,108 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="100dp"
-    android:orientation="vertical">
+    android:layout_marginTop="5dp"
+    android:layout_marginStart="60dp">
 
-    <LinearLayout
-        android:id="@+id/mLinear"
+    <TextView
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginVertical="1dp"
-        android:layout_gravity="end"
-        android:gravity="end"
-        android:layout_marginStart="30dp"
-        android:background="@drawable/send_drawable"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/rounded_rectangle_send"
+        android:paddingBottom="8dp"
+        android:paddingEnd="53dp"
+        android:paddingStart="8dp"
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Answer and Questions"
-            android:textAlignment="textStart"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="normal" />
+        android:paddingTop="8dp"
+        android:text="Hi. How are you? Some random text here and here. I need spend more time for android dev"
+        android:textColor="@android:color/black"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@+id/marginSpacer_beforeMessage"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/marginSpacer_beforeMessage"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/message_tail"
+        android:layout_width="14dp"
+        android:layout_height="13dp"
+        android:layout_marginEnd="3dp"
+        android:src="@drawable/tail"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/marginSpacer_beforeMessage"
+        app:tint="#ffe1cc" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/imageView45"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:visibility="gone"
+        android:background="@drawable/rounded_rectangle_send"
+        app:layout_constraintEnd_toEndOf="@+id/message"
+        app:layout_constraintTop_toBottomOf="@+id/message"
+        >
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imageView46"
+            android:layout_width="115dp"
+            android:layout_height="115dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp"
+            android:background="@drawable/rounded_rectangle_send"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/gallery_placeholder" />
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:src="@drawable/green_square"
+        app:tint="#ffe1cc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/message_tail" />
 
     <TextView
         android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="12.32"
-        android:textColor="#8A91A8"
+        android:layout_marginBottom="3dp"
+        android:layout_marginEnd="22dp"
+        android:maxLines="1"
+        android:text="14:42"
+        android:textColor="@color/accentColor"
         android:textSize="12sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/mLinear"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/message" />
 
     <ImageView
-        android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="130dp"
-        android:layout_margin="5dp"
-        android:scaleType="centerCrop"
-        android:visibility="gone"
-        android:src="@drawable/gallery_placeholder"
-        app:layout_constraintEnd_toEndOf="@+id/mLinear"
-        app:layout_constraintTop_toBottomOf="@+id/mLinear" />
+        android:id="@+id/messageSentTick"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/tick_black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/message" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
