--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/main_back"
+        android:background="@color/black"
         android:minHeight="?attr/actionBarSize"
         android:padding="5dp"
         android:theme="?attr/actionBarTheme"
