--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,61 +3,219 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#FFFFFF"
     tools:context=".Login">
-
-    <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/resetyourpassword"
-        />
-
-    <EditText
-
-        android:textColorHint="#6A6A6A"
-        android:id="@+id/edtEmail"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ivImage"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="match_parent"
+        android:padding="16dp"
         android:layout_marginTop="10dp"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/black"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:singleLine="true" />
+        android:background="#FFFFFF">
 
-    <EditText
-        android:id="@+id/edtPassword"
-         android:textColorHint="#6A6A6A"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edtEmail"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/black"
-        android:hint="Password"
-        android:singleLine="true" />
+        <!-- Back Arrow Icon -->
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_arrow_back"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp" />
 
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edtPassword"
-        android:layout_centerHorizontal="true"
-        android:text="Login" />
+        <!-- Title -->
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log in to Chatbox"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#000E08"
+            android:layout_below="@id/ivBack"
+            android:layout_marginTop="16dp"
+            android:layout_centerHorizontal="true" />
 
-    <Button
-        android:id="@+id/buttonSignup"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonLogin"
-        android:layout_centerHorizontal="true"
-        android:text="Signup" />
+        <!-- Subtitle -->
+        <TextView
+            android:id="@+id/tvSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome back! Sign in using your social account or email to continue us"
+            android:textSize="14sp"
+            android:layout_below="@id/tvTitle"
+            android:layout_marginTop="5dp"
+            android:textColor="#797C7B"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:padding="16dp" />
+
+        <!-- Social Login Buttons -->
+        <LinearLayout
+            android:id="@+id/llSocialLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/tvSubtitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp">
+
+            <ImageView
+                android:id="@+id/ivFacebook"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_facebook"
+                />
+
+            <ImageView
+                android:id="@+id/ivGoogle"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_google"
+                android:layout_marginStart="16dp"
+                />
+
+            <ImageView
+                android:id="@+id/ivApple"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_apple"
+                android:layout_marginStart="16dp"
+                />
+        </LinearLayout>
 
 
+        <LinearLayout
+            android:id="@+id/llor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/llSocialLogin"
+            android:layout_marginTop="20dp">
+
+            <View
+                android:id="@+id/titleUnderline2"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1"
+                android:layout_marginTop="8dp"
+                android:background="#CDD1D0" />
+
+            <TextView
+                android:id="@+id/tvOr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OR"
+                android:textColor="#797C7B"
+                android:textSize="14sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <View
+                android:id="@+id/titleUnderline"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1"
+                android:layout_marginTop="8dp"
+                android:background="#CDD1D0" />
+
+        </LinearLayout>
+        <!-- Or Text -->
+
+
+        <!-- Email EditText -->
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your Email"
+            android:textSize="14sp"
+            android:textColor="#24786D"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_below="@id/llor"
+            android:layout_marginTop="30dp" />
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:textColor="#000E08"
+            android:textSize="16sp"
+            android:backgroundTint="#CDD1D0"
+            android:inputType="textEmailAddress"
+            android:layout_below="@id/tvEmail"/>
+
+        <!-- Password EditText -->
+        <TextView
+            android:id="@+id/tvPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"
+            android:textSize="14sp"
+            android:textColor="#24786D"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_below="@id/etEmail"
+            android:layout_marginTop="16dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvPass">
+
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint=""
+                android:textSize="16sp"
+                android:textColor="#000E08"
+                android:backgroundTint="#CDD1D0"
+                android:inputType="textPassword" />
+
+            <ImageView
+                android:id="@+id/ivTogglePassword"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_eye_off"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:padding="5dp" />
+        </RelativeLayout>
+
+        <!-- Login Button -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp">
+
+            <!-- Login Button -->
+            <TextView
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Log in"
+                android:textColor="#797C7B"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:paddingVertical="15dp"
+                android:paddingHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/rounded_button" />
+
+            <!-- Forgot Password -->
+            <TextView
+                android:id="@+id/tvForgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/new_user_sign_up"
+                android:textColor="@color/black"
+                android:layout_below="@id/btnLogin"
+                android:layout_centerHorizontal="true"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp" />
+        </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
