--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,69 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#FFFFFF"
     tools:context=".SignUP">
-
-    <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/resetyourpassword" />
-
-    <EditText
-        android:textColor="@color/black"
-        android:textColorHint="#6A6A6A"
-        android:backgroundTint="@color/black"
-        android:id="@+id/edtName"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ivImage"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="match_parent"
+        android:padding="16dp"
         android:layout_marginTop="10dp"
-        android:hint="Name"
-        android:inputType="text"
-        android:singleLine="true" />
+        android:background="#FFFFFF">
 
-    <EditText
-        android:textColorHint="#6A6A6A"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/black"
-        android:id="@+id/edtEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edtName"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:hint="Email"
+        <!-- Back Arrow Icon -->
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_arrow_back"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp" />
 
-        android:inputType="textEmailAddress"
-        android:singleLine="true" />
+        <!-- Title -->
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign Up With Email"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#000E08"
+            android:layout_below="@id/ivBack"
+            android:layout_marginTop="16dp"
+            android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:textColorHint="#6A6A6A"
-        android:id="@+id/edtPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edtEmail"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/black"
-        android:hint="Password"
-        android:singleLine="true" />
+        <!-- Subtitle -->
+        <TextView
+            android:id="@+id/tvSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Get chatting with friends and family today by signing up for our chat app!"
+            android:textSize="14sp"
+            android:layout_below="@id/tvTitle"
+            android:layout_marginTop="5dp"
+            android:textColor="#797C7B"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:padding="16dp" />
 
-    <Button
-        android:id="@+id/buttonSignup"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edtPassword"
-        android:layout_centerHorizontal="true"
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your Name"
+            android:textSize="14sp"
+            android:textColor="#24786D"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_below="@id/tvSubtitle"
+            android:layout_marginTop="30dp" />
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:textColor="#000E08"
+            android:textSize="16sp"
+            android:backgroundTint="#CDD1D0"
+            android:inputType="textPersonName"
+            android:layout_below="@id/tvName"/>
 
-        android:text="Signup" />
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your Email"
+            android:textSize="14sp"
+            android:textColor="#24786D"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_below="@id/etName"
+            android:layout_marginTop="10dp" />
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:textColor="#000E08"
+            android:textSize="16sp"
+            android:backgroundTint="#CDD1D0"
+            android:inputType="textEmailAddress"
+            android:layout_below="@id/tvEmail"/>
 
+        <!-- Password EditText -->
+        <TextView
+            android:id="@+id/tvPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"
+            android:textSize="14sp"
+            android:textColor="#24786D"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_below="@id/etEmail"
+            android:layout_marginTop="16dp" />
+        <RelativeLayout
+            android:id="@+id/rlPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvPass">
+
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint=""
+                android:textSize="16sp"
+                android:textColor="#000E08"
+                android:backgroundTint="#CDD1D0"
+                android:inputType="textPassword" />
+
+            <ImageView
+                android:id="@+id/ivTogglePassword"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_eye_off"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:padding="5dp" />
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/tvConfirmPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm Password"
+            android:textSize="14sp"
+            android:textColor="#24786D"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_below="@id/rlPass"
+            android:layout_marginTop="16dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvConfirmPass">
+
+            <EditText
+                android:id="@+id/etConfirmPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint=""
+                android:textSize="16sp"
+                android:textColor="#000E08"
+                android:backgroundTint="#CDD1D0"
+                android:inputType="textPassword" />
+
+            <ImageView
+                android:id="@+id/ivToggleConfirmPassword"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_eye_off"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:padding="5dp" />
+        </RelativeLayout>
+
+        <!-- Login Button -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp">
+
+            <!-- Login Button -->
+            <TextView
+                android:id="@+id/btnCreate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create an account"
+                android:textColor="#797C7B"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:paddingVertical="15dp"
+                android:paddingHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/rounded_button" />
+
+            <!-- Forgot Password -->
+            <!--            <TextView-->
+            <!--                android:id="@+id/tvForgotPassword"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="Forgot password?"-->
+            <!--                android:textColor="#24786D"-->
+            <!--                android:layout_below="@id/btnCreate"-->
+            <!--                android:layout_centerHorizontal="true"-->
+            <!--                android:layout_marginVertical="10dp"-->
+            <!--                android:layout_marginHorizontal="10dp" />-->
+        </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
