--- a/app/src/main/res/layout/imagedialog.xml
+++ b/app/src/main/res/layout/imagedialog.xml
@@ -9,14 +9,14 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:background="@color/black"
+        android:layout_height="450dp"
         android:layout_margin="15dp"
-        android:layout_height="450dp">
+        android:background="@color/black">
+
         <com.example.khelosathireplica.utilities.zoomimageview.ZoomImageView
             android:id="@+id/ivImg"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
 
 
         <!--    <ImageView-->
@@ -30,7 +30,7 @@
         android:id="@+id/ivClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_cross_grey"
         android:layout_alignParentEnd="true"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:src="@drawable/ic_cross_grey" />
 </RelativeLayout>
